# python-jisho-cli

./: LICENSE  README.md  config.yml  jisho-cli.py  jisho_cli.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
