[project]
name = "jisho-cli"
version = "1.0.0"
description = "A simple Python 3 CLI for searching the Jisho.org Japanese language dictionary directly from the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "colorama>=0.4.6",
    "pykakasi>=2.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "termcolor>=3.2.0",
]
authors = ["vakanen <ge260vtan@mozmail.com>"]
license = "GNU General Public License v3.0"
