[project]
name = "jisho-cli"
version = "1.0.1"
description = "A simple Python 3 CLI for searching the Jisho.org Japanese language dictionary directly from the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "colorama>=0.4.6",
    "pykakasi>=2.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "termcolor>=3.3.0",
]
authors = [
    {name="vakanen", email="ge260vtan@mozmail.com"},
]
maintainers = [
    {name="vakanen", email="ge260vtan@mozmail.com"},
]
license = "GPL-3.0-or-later"
[project.scripts]
jisho-cli = "jisho_cli:main"
